[Misc] Add more memory (copy parameters from the current platform job on CI)